@@ -497,10 +497,6 @@ $1',
 'wrongpassword'         => 'Введённый вами пароль неверен. Попробуйте ещё раз.',
 'mailmypassword'        => 'Выслать новый пароль',
 'mailmypasswordauthent' => 'Выслать новый пароль',
-'passwordremindermailsubject' => "Напоминание пароля участника {{grammar:genitive|{{SITENAME}}}}",
-'passwordremindermailbody'      => "Кто-то (возможно вы) с IP-адресом $1 запросил, чтобы мы выслали вам новый пароль участника {{grammar:genitive|{{SITENAME}}}}.
-Пароль для участника $2 теперь таков: <code>$3</code>.
-Теперь Вам следует представиться системе и поменять пароль.", 
 'noemail'               => "Для участника с именем $1 электронный адрес указан не был.",
 'passwordsent'          => "Новый пароль был выслан на адрес электронной почты, указанный для участника $1.
 
